[package]
name = "rust_exercise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix"
path = "matrix/main.rs"

[[bin]]
name = "library"
path = "library/library.rs"

[[bin]]
name = "health_monitor"
path = "health_monitor/main.rs"

[[bin]]
name = "polygon"
path = "polygon/main.rs"

[[bin]]
name = "luhn"
path = "luhn/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
