[package]
name = "rust_exercise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix"
path = "src/matrix.rs"

[[bin]]
name = "library"
path = "src/library.rs"

[[bin]]
name = "health_monitor"
path = "src/health_monitor.rs"

[[bin]]
name = "polygon"
path = "src/polygon.rs"

[[bin]]
name = "luhn"
path = "src/luhn.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
